crates/aranya-policy-compiler/tests/data/misc/map_in_function_invalid_statement.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: invalid statement
  |
1 | function pets() int {
2 |     map Pet[name:?]=>{} as p {}
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ statement not allowed in pure function context
3 |     return 0
4 | }
  |
